[gd_scene load_steps=12 format=3 uid="uid://dgwn12a1swsxr"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_jvjoh"]
[ext_resource type="PackedScene" uid="uid://b3koyon3b1egm" path="res://coliseum.tscn" id="2_d68uo"]
[ext_resource type="Texture2D" uid="uid://bvlgdsm8d5woa" path="res://assets/skyboxarchitect/uploads_files_4381654_LightBlueSky_texture.jpg" id="2_gxp82"]
[ext_resource type="PackedScene" uid="uid://owr0a6iuh5je" path="res://game/platforms/starting_platform.tscn" id="3_dhnni"]
[ext_resource type="FontFile" uid="uid://t51b6g3161l2" path="res://assets/com/google/fonts/BungeeTint-Regular.ttf" id="3_isns0"]
[ext_resource type="PackedScene" uid="uid://dvosrcie5fyxl" path="res://assets/vfx/platform_explosion.tscn" id="4_ten30"]
[ext_resource type="PackedScene" uid="uid://b4evfy2navalt" path="res://assets/vfx/spectators_01.tscn" id="7_8utdk"]
[ext_resource type="PackedScene" uid="uid://cxn20khnv6467" path="res://assets/vfx/spectators_02.tscn" id="8_0c8nm"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_31rx2"]
panorama = ExtResource("2_gxp82")

[sub_resource type="Sky" id="Sky_oqtc0"]
sky_material = SubResource("PanoramaSkyMaterial_31rx2")

[sub_resource type="Environment" id="Environment_50a83"]
background_mode = 2
sky = SubResource("Sky_oqtc0")
tonemap_mode = 2
glow_enabled = true

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jvjoh")
game_scene = ExtResource("2_d68uo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -33.0
offset_right = 150.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 16

[node name="Title" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.870248, 0.848211, 1)
theme_override_constants/line_spacing = 10
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("3_isns0")
theme_override_font_sizes/font_size = 72
text = "Growbot Arena"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 20
text = "Name:"

[node name="NameField" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Qwerty"
placeholder_text = "Name"
alignment = 1
clear_button_enabled = true

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "Start
"

[node name="Background" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Background"]
environment = SubResource("Environment_50a83")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Background"]
transform = Transform3D(-0.923516, -0.383507, -0.00641135, -0.271557, 0.641945, 0.717051, -0.270878, 0.663949, -0.696991, 0, 3.38992, -8.39351)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="Background"]
transform = Transform3D(-1, -1.51808e-08, -8.60946e-08, 0, 0.984808, -0.173648, 8.74228e-08, -0.173648, -0.984808, 0, 0, -2.5)

[node name="StartingPlatform" parent="Background" instance=ExtResource("3_dhnni")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.36987, 28.0186)
approach_direction = Vector3(0, 0, -1)
life_time = 60.0

[node name="Explosion1" parent="Background" instance=ExtResource("4_ten30")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.41659, -2.90061, -0.46085)

[node name="Explosion2" parent="Background" instance=ExtResource("4_ten30")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.14363, -2.90061, -0.46085)

[node name="Spectators1" parent="Background" instance=ExtResource("7_8utdk")]
transform = Transform3D(-0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, -0.5, 5, 0, 4)

[node name="Spectators2" parent="Background" instance=ExtResource("8_0c8nm")]
transform = Transform3D(0.728083, 0, -0.685488, 0, 1, 0, 0.685488, 0, 0.728083, -5, -0.370126, 3.96332)
